# zephyr

./: .gitignore  README.rst
app/Central_SC_xor/: CMakeLists.txt  prj.conf  sample.yaml
app/Central_SC_xor/src/: main.c
app/Central_app_layer/: CMakeLists.txt  prj.conf
app/Central_app_layer/src/: ecc.c  main.c
app/crypto/: prj.conf  sample.yaml
app/crypto/src/: main.c
app/ecc_enc/: CMakeLists.txt  prj.conf
app/ecc_enc/src/: main.c
app/encryption/: prj.conf
app/encryption/src/: main.c
app/peripheral_SC_xor/: prj.conf
app/peripheral_SC_xor/src/: main.c
app/peripheral_app_layer/: CMakeLists.txt  prj.conf  sample.yaml
app/peripheral_app_layer/src/: main.c
app/wccc_eddystone/: prj.conf
app/wccc_eddystone/src/: main.c
include/bluetooth/: conn.h  crypto.h  ecc.h  hci.h
include/crypto/: cipher_structs.h
include/logging/: log.h
samples/bluetooth/eddystone/: prj.conf  sample.yaml
samples/bluetooth/ibeacon/: sample.yaml
samples/bluetooth/peripheral_ht/: sample.yaml
samples/bluetooth/peripheral_sc_only/: prj.conf  sample.yaml
samples/bluetooth/peripheral_sc_only/src/: main.c
subsys/bluetooth/: Kconfig
subsys/bluetooth/controller/crypto/: crypto.c
subsys/bluetooth/controller/hal/: ecb.h
subsys/bluetooth/controller/hci/: hci.c
subsys/bluetooth/controller/include/: ll.h
subsys/bluetooth/controller/ll_sw/: ull_conn.c  ull_conn_types.h  ull_master.c
subsys/bluetooth/host/: att_internal.h  conn.c  crypto.c  ecc.c  gatt.c  hci_core.c  hci_core.h  hci_ecc.c  keys.h  smp.c  smp.h
(+1 files in other folders)
